# Gegelapy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml  setup.py
.github/workflows/: release.yml
gegelapy/: __init__.py  gym_worker.py
gegelapy/codegen/: CMakeLists.txt  __init__.py
gegelapy/codegen/src/: wrapper.cpp
include/: instructions.h  outputConversions.h  trainer.h
include/algorithms/: algorithm.h  atpg.h  cgp.h  lgp.h  maple.h  tgp.h  tpg.h
include/environments/: gymEnvironment.h  win32GymEnvironment.h
include/selectors/: selectors.h  tournament.h  truncation.h
src/: gegelapy.cpp  gymEnvironment.cpp  gymEnvironment.h  gymTrainer.cpp  gymTrainer.h  instructions.cpp  instructions.h  outputConversions.cpp  tpg.cpp  tpg.h  trainer.cpp
src/algorithms/: algorithm.cpp  algorithms.cpp
src/environments/: posixGymEnvironment.cpp  win32GymEnvironment.cpp
src/selectors/: selectors.cpp
